--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     {% include 'includes/_navbar.html' %}
+    {% include 'includes/_messages.html' %}
     {% block body %}{% endblock %}
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
