--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -14,6 +14,8 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/articles">Articles</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
                 <li><a href="/register">Register</a></li>
             </ul>
         </div>
