--- a/templates/register.html
+++ b/templates/register.html
@@ -2,24 +2,30 @@
 
 {% block body %}
     <div class="container">
-        <h1>Register</h1>
-        <form method="POST" action="">
-            <div class="form-group">
-                {{form.name(clas_="form-control")}}
+        <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <h1 class="text-center">Register</h1>
+                {% from "includes/_formhelpers.html" import render_field %}
+                <form method="POST" action="">
+                    <div class="form-group">
+                        {{render_field(form.name, class_="form-control")}}
+                    </div>
+                    <div class="form-group">
+                        {{render_field(form.email, class_="form-control")}}
+                    </div>
+                    <div class="form-group">
+                        {{render_field(form.username, class_="form-control")}}
+                    </div>
+                    <div class="form-group">
+                        {{render_field(form.password, class_="form-control")}}
+                    </div>
+                    <div class="form-group">
+                        {{render_field(form.confirm, class_="form-control")}}
+                    </div>
+                    <p><input type="submit" class="btn btn-primary btn-block" value="submit"></p>
+                </form>
             </div>
-            <div class="form-group">
-                {{form.email(clas_="form-control")}}
-            </div>
-            <div class="form-group">
-                {{form.username(clas_="form-control")}}
-            </div>
-            <div class="form-group">
-                {{form.password(clas_="form-control")}}
-            </div>
-            <div class="form-group">
-                {{form.confirm(clas_="form-control")}}
-            </div>
-            <p><input type="submit" class="btn btn-primary" value="submit"></p>
-        </form>
+        </div>
     </div>
 {% endblock %}
